# sage

./: .gitignore  README.md  __init__.py  build_md.py  compile_arxiv.py  ingestion_status.json  md_config.js  sage_academic_review.md  sage_blueprint.md  sage_discover.py  sage_embodied_agency.md  sage_gaia_bridge.py  sage_guided_discovery.py  sage_manuscript.md  sage_paper_full.md  sage_science_stream.py  sage_shell.py  sage_stream.py  teach_sage.py  test_mla.py  test_sage.py
agent/: core_agent.py  godel_optimizer.py
arxiv_submission/: sage_manuscript.docx  sage_manuscript.html  sage_manuscript.md  sage_paper.tex
benchmarks/: internet_stream_test.py  mega_results.json  mega_scale_test.py  monitor_ingestion.py  results.json  scaling_test.py
causality/: do_calculus.py  koopman.py  scm.py
discovery/: epistemic_foraging.py
gaia/: Cargo.toml  README.md
gaia/.github/workflows/: build.yml
gaia/docs/: gaia_architecture_blueprint.md  omniphysics_breakthrough_solutions.md  omniphysics_mathematical_bottlenecks.md  ranking_report.md
gaia/src/: editor.rs  lib.rs  main.rs  ui.rs
gaia/src/core/: cloth.rs  components.rs  deq.rs  fluid.rs  joints.rs  light.rs  mod.rs  particles.rs  raycast.rs  shapes.rs  soft_body.rs  solver.rs  world.rs
gaia/src/core/collision/: bvh.rs  gjk.rs  mod.rs
gaia/src/metal/: buffers.rs  device.rs  manifolds.rs  mod.rs
gaia/src/shaders/: physics_kernels.metal
inference/: active_inference.py  free_energy.py
ingestion/: knowledge_bridge.py  semantic_parser.py  wikipedia_ingest.py
learning/: __init__.py  affordance.py  distillation.py  (+3 more)
(+28 files in other folders)
