[package]
name = "gaia"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
egui-macroquad = "0.17.3"
glam = { version = "0.32.0", features = ["serde"] }
hecs = "0.11.0"
macroquad = "0.4.14"
metal = "0.33.0"
objc2 = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.11.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
